<?xml version="1.0"?>
<package format="2">
  <name>ros_actionlib_benchmark</name>
  <version>0.1.0</version>
  <description>todo </description>
  <maintainer email="todo@hotmail.com">todo</maintainer>
  <license>Apache 2.0</license>

  <author>todo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>


</package>
